--- a/content/project/Hazing Project/Project 1 Md.html
+++ b/content/project/Hazing Project/Project 1 Md.html
@@ -10,7 +10,7 @@ output:
 menu:
   docs:
     
-    parent: "Factor"
+    parent: "Hazing Experimental Survey Project"
     weight: 1
 type: docs
 tag:
