--- a/content/project/Hazing Project/Project 1 Md.html
+++ b/content/project/Hazing Project/Project 1 Md.html
@@ -7,11 +7,11 @@ linktitle: "Experimental Survey on Hazing"
 output:
   blogdown::html_page:
     toc: true
+    
 menu:
   docs:
-    
-    parent: "Hazing Experimental Survey Project"
-    weight: 1
+    parent: "Projects"
+    weight: 3
 type: docs
 tag:
  - Hazing Project
