--- a/content/project/Hazing Project/Project 1 Md.html
+++ b/content/project/Hazing Project/Project 1 Md.html
@@ -17,18 +17,10 @@ tag:
  - Hazing Project
 editor_options: 
   chunk_output_type: console
+shiny: true
 ---
 
 <script src="Project 1 Md_files/header-attrs/header-attrs.js"></script>
-<script src="Project 1 Md_files/htmlwidgets/htmlwidgets.js"></script>
-<script src="Project 1 Md_files/jquery/jquery.min.js"></script>
-<link href="Project 1 Md_files/datatables-css/datatables-crosstalk.css" rel="stylesheet" />
-<script src="Project 1 Md_files/datatables-binding/datatables.js"></script>
-<link href="Project 1 Md_files/dt-core/css/jquery.dataTables.min.css" rel="stylesheet" />
-<link href="Project 1 Md_files/dt-core/css/jquery.dataTables.extra.css" rel="stylesheet" />
-<script src="Project 1 Md_files/dt-core/js/jquery.dataTables.min.js"></script>
-<link href="Project 1 Md_files/crosstalk/css/crosstalk.css" rel="stylesheet" />
-<script src="Project 1 Md_files/crosstalk/js/crosstalk.min.js"></script>
 
 <div id="TOC">
 <ul>
@@ -49,48 +41,6 @@ editor_options:
 
 <div id="data-prep-and-cleaning" class="section level2">
 <h2>Data Prep and Cleaning</h2>
-<pre><code>## -- Attaching packages --------------------------------------- tidyverse 1.3.0 --</code></pre>
-<pre><code>## v ggplot2 3.3.3     v purrr   0.3.4
-## v tibble  3.1.0     v dplyr   1.0.5
-## v tidyr   1.1.3     v stringr 1.4.0
-## v readr   1.4.0     v forcats 0.5.1</code></pre>
-<pre><code>## -- Conflicts ------------------------------------------ tidyverse_conflicts() --
-## x dplyr::filter() masks stats::filter()
-## x dplyr::lag()    masks stats::lag()</code></pre>
-<pre><code>## Registering fonts with R</code></pre>
-<pre><code>## Loading required package: xtable</code></pre>
-<pre><code>## 
-## Attaching package: &#39;likert&#39;</code></pre>
-<pre><code>## The following object is masked from &#39;package:dplyr&#39;:
-## 
-##     recode</code></pre>
-<pre><code>## Warning: package &#39;gmodels&#39; was built under R version 4.0.5</code></pre>
-<pre><code>## Loading required package: carData</code></pre>
-<pre><code>## 
-## Attaching package: &#39;car&#39;</code></pre>
-<pre><code>## The following object is masked from &#39;package:likert&#39;:
-## 
-##     recode</code></pre>
-<pre><code>## The following object is masked from &#39;package:dplyr&#39;:
-## 
-##     recode</code></pre>
-<pre><code>## The following object is masked from &#39;package:purrr&#39;:
-## 
-##     some</code></pre>
-<pre><code>## Registered S3 method overwritten by &#39;DescTools&#39;:
-##   method         from 
-##   reorder.factor gdata</code></pre>
-<pre><code>## 
-## Attaching package: &#39;DescTools&#39;</code></pre>
-<pre><code>## The following object is masked from &#39;package:car&#39;:
-## 
-##     Recode</code></pre>
-<pre><code>## Warning: package &#39;qqplotr&#39; was built under R version 4.0.5</code></pre>
-<pre><code>## 
-## Attaching package: &#39;qqplotr&#39;</code></pre>
-<pre><code>## The following objects are masked from &#39;package:ggplot2&#39;:
-## 
-##     stat_qq_line, StatQqLine</code></pre>
 </div>
 <div id="theme-setup" class="section level2">
 <h2>Theme Setup</h2>
@@ -110,16 +60,18 @@ editor_options:
 </div>
 <div id="creating-the-hazing-score-variable" class="section level2">
 <h2>Creating the Hazing Score Variable</h2>
-<p>The hazing score is a numeric representation of how positively or negatively a participant views hazing in general. The score can range from -18 to 18 and higher values indicate less positive views of hazing. The score was generated using 9 of the 15 Likert scale level of agreement items included in the survey.
-* All initiations of new group members are hazing.
-* An action is not hazing if the victim consents.
-* Hazing is useful for group cohesion
-* Hazing can be fun.
-* Hazing is a serious issue which needs to be prevented.
-* Hazing is dangerous
-* Hazing should be illegal.
-* Sometimes hazing is acceptable.
-* There are no benefits to hazing new group members.</p>
+<p>The hazing score is a numeric representation of how positively or negatively a participant views hazing in general. The score can range from -18 to 18 and higher values indicate less positive views of hazing. The score was generated using 9 of the 15 Likert scale level of agreement items included in the survey.</p>
+<ul>
+<li>All initiations of new group members are hazing.</li>
+<li>An action is not hazing if the victim consents.</li>
+<li>Hazing is useful for group cohesion</li>
+<li>Hazing can be fun.</li>
+<li>Hazing is a serious issue which needs to be prevented.</li>
+<li>Hazing is dangerous</li>
+<li>Hazing should be illegal.</li>
+<li>Sometimes hazing is acceptable.</li>
+<li>There are no benefits to hazing new group members.</li>
+</ul>
 <div id="selecting-appriorate-variables" class="section level3">
 <h3>Selecting Appriorate Variables</h3>
 <pre><code>## [1] &quot;An action is not hazing if the victim consents.&quot;       
@@ -143,14 +95,189 @@ editor_options:
 <div id="analysis" class="section level3">
 <h3>Analysis</h3>
 <p><img src="/project/Hazing Project/Project%201%20Md_files/figure-html/unnamed-chunk-5-1.png" width="672" /><img src="/project/Hazing Project/Project%201%20Md_files/figure-html/unnamed-chunk-5-2.png" width="672" /></p>
-<div id="htmlwidget-1" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-1">{"x":{"filter":"none","data":[["1","2"],["No/Unsure","Yes"],[87,615],[0.931034482758621,8.86991869918699],[8.09362813324545,5.8470730303884],[0.867728017396827,0.23577674096827],[-0.793951724736499,8.4068920556593],[2.65602069025374,9.33294534271468],[0,11],[13.5,9],[-1,10],[4,11],[0.963004100993356,0.908904962579174],[0.0137774558377356,1.00754443090843e-18]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>Guilty?<\/th>\n      <th>n<\/th>\n      <th>mean<\/th>\n      <th>sd<\/th>\n      <th>stderr<\/th>\n      <th>LCL<\/th>\n      <th>UCL<\/th>\n      <th>median<\/th>\n      <th>IQR<\/th>\n      <th>LCLmed<\/th>\n      <th>UCLmed<\/th>\n      <th>W Stat<\/th>\n      <th>p.value<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"dom":"t","columnDefs":[{"targets":12,"render":"function(data, type, row, meta) {\n    return type !== 'display' ? data : DTWidget.formatRound(data, 4, 3, \",\", \".\");\n  }"},{"targets":13,"render":"function(data, type, row, meta) {\n    return type !== 'display' ? data : DTWidget.formatRound(data, 4, 3, \",\", \".\");\n  }"},{"targets":3,"render":"function(data, type, row, meta) {\n    return type !== 'display' ? data : DTWidget.formatRound(data, 4, 3, \",\", \".\");\n  }"},{"targets":4,"render":"function(data, type, row, meta) {\n    return type !== 'display' ? data : DTWidget.formatRound(data, 4, 3, \",\", \".\");\n  }"},{"targets":5,"render":"function(data, type, row, meta) {\n    return type !== 'display' ? data : DTWidget.formatRound(data, 4, 3, \",\", \".\");\n  }"},{"targets":6,"render":"function(data, type, row, meta) {\n    return type !== 'display' ? data : DTWidget.formatRound(data, 4, 3, \",\", \".\");\n  }"},{"targets":7,"render":"function(data, type, row, meta) {\n    return type !== 'display' ? data : DTWidget.formatRound(data, 4, 3, \",\", \".\");\n  }"},{"className":"dt-right","targets":[2,3,4,5,6,7,8,9,10,11,12,13]},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":["options.columnDefs.0.render","options.columnDefs.1.render","options.columnDefs.2.render","options.columnDefs.3.render","options.columnDefs.4.render","options.columnDefs.5.render","options.columnDefs.6.render"],"jsHooks":[]}</script>
-<div id="htmlwidget-2" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-2">{"x":{"filter":"none","data":[["1","2"],["Female","Male"],[486,216],[9.10082304526749,5.15277777777778],[5.61993133295943,8.00579973877466],[0.254925262133887,0.544725676191799],[8.59992873706993,4.07909126465951],[9.60171735346505,6.22646429089604],[11,8],[8,12],[10,5],[11,9],[0.910081575039545,0.934495649771007],[2.25852859564378e-16,2.97460264631706e-08]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>Gender<\/th>\n      <th>n<\/th>\n      <th>mean<\/th>\n      <th>sd<\/th>\n      <th>stderr<\/th>\n      <th>LCL<\/th>\n      <th>UCL<\/th>\n      <th>median<\/th>\n      <th>IQR<\/th>\n      <th>LCLmed<\/th>\n      <th>UCLmed<\/th>\n      <th>W Stat<\/th>\n      <th>p.value<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"dom":"t","columnDefs":[{"targets":12,"render":"function(data, type, row, meta) {\n    return type !== 'display' ? data : DTWidget.formatRound(data, 4, 3, \",\", \".\");\n  }"},{"targets":13,"render":"function(data, type, row, meta) {\n    return type !== 'display' ? data : DTWidget.formatRound(data, 4, 3, \",\", \".\");\n  }"},{"targets":3,"render":"function(data, type, row, meta) {\n    return type !== 'display' ? data : DTWidget.formatRound(data, 4, 3, \",\", \".\");\n  }"},{"targets":4,"render":"function(data, type, row, meta) {\n    return type !== 'display' ? data : DTWidget.formatRound(data, 4, 3, \",\", \".\");\n  }"},{"targets":5,"render":"function(data, type, row, meta) {\n    return type !== 'display' ? data : DTWidget.formatRound(data, 4, 3, \",\", \".\");\n  }"},{"targets":6,"render":"function(data, type, row, meta) {\n    return type !== 'display' ? data : DTWidget.formatRound(data, 4, 3, \",\", \".\");\n  }"},{"targets":7,"render":"function(data, type, row, meta) {\n    return type !== 'display' ? data : DTWidget.formatRound(data, 4, 3, \",\", \".\");\n  }"},{"className":"dt-right","targets":[2,3,4,5,6,7,8,9,10,11,12,13]},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":["options.columnDefs.0.render","options.columnDefs.1.render","options.columnDefs.2.render","options.columnDefs.3.render","options.columnDefs.4.render","options.columnDefs.5.render","options.columnDefs.6.render"],"jsHooks":[]}</script>
-<p><img src="/project/Hazing Project/Project%201%20Md_files/figure-html/unnamed-chunk-5-5.png" width="672" /><img src="/project/Hazing Project/Project%201%20Md_files/figure-html/unnamed-chunk-5-6.png" width="672" /></p>
-<div id="htmlwidget-3" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-3">{"x":{"filter":"none","data":[["1"],[-7.99995155551646],[11363],[2.97909144640395e-18],[-9.9999983134],[-5.99999005123952],["Wilcoxon rank sum test with continuity correction"],["two.sided"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>estimate<\/th>\n      <th>statistic<\/th>\n      <th>p.value<\/th>\n      <th>conf.low<\/th>\n      <th>conf.high<\/th>\n      <th>method<\/th>\n      <th>alternative<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"dom":"t","columnDefs":[{"targets":1,"render":"function(data, type, row, meta) {\n    return type !== 'display' ? data : DTWidget.formatRound(data, 4, 3, \",\", \".\");\n  }"},{"targets":3,"render":"function(data, type, row, meta) {\n    return type !== 'display' ? data : DTWidget.formatRound(data, 4, 3, \",\", \".\");\n  }"},{"targets":4,"render":"function(data, type, row, meta) {\n    return type !== 'display' ? data : DTWidget.formatRound(data, 4, 3, \",\", \".\");\n  }"},{"targets":5,"render":"function(data, type, row, meta) {\n    return type !== 'display' ? data : DTWidget.formatRound(data, 4, 3, \",\", \".\");\n  }"},{"className":"dt-right","targets":[1,2,3,4,5]},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":["options.columnDefs.0.render","options.columnDefs.1.render","options.columnDefs.2.render","options.columnDefs.3.render"],"jsHooks":[]}</script>
-<div id="htmlwidget-4" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-4">{"x":{"filter":"none","data":[["1"],[3.00004803823662],[67582],[1.05769791492192e-09],[2.00004952580723],[4.00000440031789],["Wilcoxon rank sum test with continuity correction"],["two.sided"]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th> <\/th>\n      <th>estimate<\/th>\n      <th>statistic<\/th>\n      <th>p.value<\/th>\n      <th>conf.low<\/th>\n      <th>conf.high<\/th>\n      <th>method<\/th>\n      <th>alternative<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"dom":"t","columnDefs":[{"targets":1,"render":"function(data, type, row, meta) {\n    return type !== 'display' ? data : DTWidget.formatRound(data, 4, 3, \",\", \".\");\n  }"},{"targets":3,"render":"function(data, type, row, meta) {\n    return type !== 'display' ? data : DTWidget.formatRound(data, 4, 3, \",\", \".\");\n  }"},{"targets":4,"render":"function(data, type, row, meta) {\n    return type !== 'display' ? data : DTWidget.formatRound(data, 4, 3, \",\", \".\");\n  }"},{"targets":5,"render":"function(data, type, row, meta) {\n    return type !== 'display' ? data : DTWidget.formatRound(data, 4, 3, \",\", \".\");\n  }"},{"className":"dt-right","targets":[1,2,3,4,5]},{"orderable":false,"targets":0}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":["options.columnDefs.0.render","options.columnDefs.1.render","options.columnDefs.2.render","options.columnDefs.3.render"],"jsHooks":[]}</script>
+<table style="width:100%;">
+<colgroup>
+<col width="9%" />
+<col width="3%" />
+<col width="9%" />
+<col width="8%" />
+<col width="9%" />
+<col width="10%" />
+<col width="8%" />
+<col width="6%" />
+<col width="4%" />
+<col width="6%" />
+<col width="6%" />
+<col width="9%" />
+<col width="9%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th align="left">Guilty?</th>
+<th align="right">n</th>
+<th align="right">mean</th>
+<th align="right">sd</th>
+<th align="right">stderr</th>
+<th align="right">LCL</th>
+<th align="right">UCL</th>
+<th align="right">median</th>
+<th align="right">IQR</th>
+<th align="right">LCLmed</th>
+<th align="right">UCLmed</th>
+<th align="right">W Stat</th>
+<th align="right">p.value</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left">No/Unsure</td>
+<td align="right">87</td>
+<td align="right">0.9310345</td>
+<td align="right">8.093628</td>
+<td align="right">0.8677280</td>
+<td align="right">-0.7939517</td>
+<td align="right">2.656021</td>
+<td align="right">0</td>
+<td align="right">13.5</td>
+<td align="right">-1</td>
+<td align="right">4</td>
+<td align="right">0.9630041</td>
+<td align="right">0.0137775</td>
+</tr>
+<tr class="even">
+<td align="left">Yes</td>
+<td align="right">615</td>
+<td align="right">8.8699187</td>
+<td align="right">5.847073</td>
+<td align="right">0.2357767</td>
+<td align="right">8.4068921</td>
+<td align="right">9.332945</td>
+<td align="right">11</td>
+<td align="right">9.0</td>
+<td align="right">10</td>
+<td align="right">11</td>
+<td align="right">0.9089050</td>
+<td align="right">0.0000000</td>
+</tr>
+</tbody>
+</table>
+<table>
+<thead>
+<tr class="header">
+<th align="left">Gender</th>
+<th align="right">n</th>
+<th align="right">mean</th>
+<th align="right">sd</th>
+<th align="right">stderr</th>
+<th align="right">LCL</th>
+<th align="right">UCL</th>
+<th align="right">median</th>
+<th align="right">IQR</th>
+<th align="right">LCLmed</th>
+<th align="right">UCLmed</th>
+<th align="right">W Stat</th>
+<th align="right">p.value</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left">Female</td>
+<td align="right">486</td>
+<td align="right">9.100823</td>
+<td align="right">5.619931</td>
+<td align="right">0.2549253</td>
+<td align="right">8.599929</td>
+<td align="right">9.601717</td>
+<td align="right">11</td>
+<td align="right">8</td>
+<td align="right">10</td>
+<td align="right">11</td>
+<td align="right">0.9100816</td>
+<td align="right">0</td>
+</tr>
+<tr class="even">
+<td align="left">Male</td>
+<td align="right">216</td>
+<td align="right">5.152778</td>
+<td align="right">8.005800</td>
+<td align="right">0.5447257</td>
+<td align="right">4.079091</td>
+<td align="right">6.226464</td>
+<td align="right">8</td>
+<td align="right">12</td>
+<td align="right">5</td>
+<td align="right">9</td>
+<td align="right">0.9344956</td>
+<td align="right">0</td>
+</tr>
+</tbody>
+</table>
+<p><img src="/project/Hazing Project/Project%201%20Md_files/figure-html/unnamed-chunk-5-3.png" width="672" /><img src="/project/Hazing Project/Project%201%20Md_files/figure-html/unnamed-chunk-5-4.png" width="672" /></p>
+<table>
+<colgroup>
+<col width="9%" />
+<col width="9%" />
+<col width="7%" />
+<col width="9%" />
+<col width="9%" />
+<col width="45%" />
+<col width="10%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th align="right">estimate</th>
+<th align="right">statistic</th>
+<th align="right">p.value</th>
+<th align="right">conf.low</th>
+<th align="right">conf.high</th>
+<th align="left">method</th>
+<th align="left">alternative</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="right">-7.999952</td>
+<td align="right">11363</td>
+<td align="right">0</td>
+<td align="right">-9.999998</td>
+<td align="right">-5.99999</td>
+<td align="left">Wilcoxon rank sum test with continuity correction</td>
+<td align="left">two.sided</td>
+</tr>
+</tbody>
+</table>
+<table>
+<colgroup>
+<col width="8%" />
+<col width="9%" />
+<col width="7%" />
+<col width="8%" />
+<col width="9%" />
+<col width="46%" />
+<col width="11%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th align="right">estimate</th>
+<th align="right">statistic</th>
+<th align="right">p.value</th>
+<th align="right">conf.low</th>
+<th align="right">conf.high</th>
+<th align="left">method</th>
+<th align="left">alternative</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="right">3.000048</td>
+<td align="right">67582</td>
+<td align="right">0</td>
+<td align="right">2.000049</td>
+<td align="right">4.000004</td>
+<td align="left">Wilcoxon rank sum test with continuity correction</td>
+<td align="left">two.sided</td>
+</tr>
+</tbody>
+</table>
 </div>
 </div>
