--- a/public/index.html
+++ b/public/index.html
@@ -1099,7 +1099,7 @@
   <div class="media-body">
 
     <div class="section-subheading article-title mb-0 mt-0">
-      <a href="/project/academic-self-concept-project/academic-self-project/" >Academic Self-Concept Project</a>
+      <a href="/project/academic-self-concept-project/academic-self-project/" >The Academic Self-Concept Project</a>
     </div>
 
     
